-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 2, 5.0.0
-
None
-
-
698ae963e4cbb6c5d9239d0a10efc0cb910fa310
qtbase/src/testlib/qtestcase.cpp contains a number of blocks of code in "#ifdef Q_WS_MAC", one of which mentions the (no longer supported) Carbon API. Since QPA was merged into qtbase, Q_WS_MAC is no longer defined, so these blocks of code need to be either reworked or removed.